--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,51 @@
 
 # debug information files
 *.dwo
+
+.*
+!.gitignore
+
+*.autosave
+*.pyc
+*.user
+*~
+Thumbs.db
+tags
+tegra/
+bin/
+*.sdf
+*.opensdf
+*.obj
+*.stamp
+*.depend
+*.rule
+*.tmp
+*/debug
+*.suo
+*.log
+*.tlog
+build
+node_modules
+CMakeSettings.json
+xcuserdata/
+
+# Directories
+**bin/
+**bin-int/
+
+# Files
+*.user
+*imgui.ini
+
+# Visual Studio
+.vs/
+*.sln
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+
+# Visual Studio build files
+x64/
+*.idb
+*.recipe
+*.FileListAbsolute.txt
